--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
         <a onclick="myAlert()">Download CV</a>
       </div>
     </nav>
+    <div class="fullNav">
+      <ul>
+        <li><a href="#about" class="black1 white2">About</a></li>
+        <li><a href="#skill" class="black1 white2">Skills</a></li>
+        <li><a href="#exp" class="black1 white2">Experience</a></li>
+        <li><a href="#proj" class="black1 white2">Projects</a></li>
+        <li><a href="#cont" class="black1 white2">Contact</a></li>
+      </ul>
+      <button onclick="myTheme()" class="black1 white1 turn">
+        <i class="fa-regular fa-sun" id="sun"></i>
+        <i class="fa-solid fa-circle-half-stroke" id="night"></i>
+      </button>
+      <a onclick="myAlert()">Download CV</a>
+    </div>
   </header>
 
   <main>
@@ -50,31 +64,33 @@
         <div class="img"><img src="assets/profil1.jpeg" alt="My Photo"></div>
       </div>
 
-      <div class="heroIntro">
-        <div class="white1">Hi, I'm Subhan 👋</div>
-        <p class="white2">
-          I'm a student of IPB University majoring in Computer Science. I have learned Web Development since
-          I was in high school, especially about front-end. Currently, I also learned Competitive Programming and
-          I have a team called "Syntax Generator" which contains three members to take part in the competition.
-        </p>
-      </div>
-
-      <div class="heroLocation">
-        <div class="locLogo">
-          <i class="fa-solid fa-location-dot white1"></i>
-          <p class="white2">Bogor, Indonesia</p>
+      <div class="heroWrapper">
+        <div class="heroIntro">
+          <div class="white1">Hi, I'm Subhan 👋</div>
+          <p class="white2">
+            I'm a student of IPB University majoring in Computer Science. I have learned Web Development since
+            I was in high school, especially about front-end. Currently, I also learned Competitive Programming and
+            I have a team called "Syntax Generator" which contains three members to take part in the competition.
+          </p>
         </div>
-        <div class="locLogo">
-          <div></div>
-          <p class="white2">Active student</p>
-        </div>
-      </div>
 
-      <div class="more">
-        <a href="https://github.com/ahmadsubhand" target="_blank"><i class="fa-brands fa-github white1 hover"></i></a>
-        <a href="https://instagram.com/ahmadsubhand" target="_blank"><i class="fa-brands fa-instagram white1 hover"></i></a>
-        <a href="https://www.linkedin.com/in/ahmad-subhan-daryhadi-37b559248/" target="_blank"><i
-            class="fa-brands fa-linkedin white1 hover"></i></a>
+        <div class="heroLocation">
+          <div class="locLogo">
+            <i class="fa-solid fa-location-dot white1"></i>
+            <p class="white2">Bogor, Indonesia</p>
+          </div>
+          <div class="locLogo">
+            <div></div>
+            <p class="white2">Active student</p>
+          </div>
+        </div>
+
+        <div class="more">
+          <a href="https://github.com/ahmadsubhand" target="_blank"><i class="fa-brands fa-github white1 hover"></i></a>
+          <a href="https://instagram.com/ahmadsubhand" target="_blank"><i class="fa-brands fa-instagram white1 hover"></i></a>
+          <a href="https://www.linkedin.com/in/ahmad-subhan-daryhadi-37b559248/" target="_blank"><i
+              class="fa-brands fa-linkedin white1 hover"></i></a>
+        </div>
       </div>
     </section>
 
