--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <div class="wrapper"></div>
   <header class="black1">
     <h1 class="headLeft white1">&lt;ASD /&gt;</h1>
-    <label class="headRight" onclick="myFunction()"><i class="fa-solid fa-bars white1 turn"></i></label>
+    <label class="headRight" onclick="myFunction()"><i class="fa-solid fa-bars white1"></i></label>
     <nav class="black1">
       <div class="headNav">
         <h1 class="white1">&lt;ASD /&gt;</h1>
-        <label onclick="myFunction()"><i class="fa-solid fa-xmark white1 turn"></i></label>
+        <label onclick="myFunction()"><i class="fa-solid fa-xmark white1"></i></label>
       </div>
       <ul class="headList">
         <li><a onclick="myFunction()" class="white2" href="#about">About</a></li>
