--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="theme">
         <div>
           <p class="white2">Switch Theme</p>
-          <button onclick="myTheme()" class="black1 white1 turn">
+          <button onclick="myTheme()" class="black1 white1">
             <i class="fa-regular fa-sun" id="sun"></i>
             <i class="fa-solid fa-circle-half-stroke" id="night"></i>
           </button>
